[package]
name = "concurrency_eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
futures = "0.3"
bytes = "1.0"
serde = "1.0.136"
serde_json = "1.0.100"
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.8.1"
memchr = "2.7"